HVAC Backup 2/objects/Price_Matrix__c(1).object
<CustomObject>
    <description>BSL custom pricing, based on sub families</description>
    <fields>
        <fullName>Capacity_Price__c</fullName>
        <inlineHelpText>Capacity price ( for the department - 52 )</inlineHelpText>
        <label>Capacity Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <description>Pricing depends on contract type</description>
        <label>Contract Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CEC</fullName>
                </value>
                <value>
                    <fullName>EFM</fullName>
                </value>
                <value>
                    <fullName>IEW</fullName>
                </value>
                <value>
                    <fullName>LBR</fullName>
                </value>
                <value>
                    <fullName>OLC</fullName>
                </value>
                <value>
                    <fullName>OPR</fullName>
                </value>
                <value>
                    <fullName>ORC</fullName>
                </value>
                <value>
                    <fullName>PMC</fullName>
                </value>
                <value>
                    <fullName>RPC</fullName>
                </value>
                <value>
                    <fullName>EWC</fullName>
                    <isActive>false</isActive>
                    <label>EWC</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Model_Capacity__c</fullName>
        <inlineHelpText>Select capacity when, pricing method is Capacity
- requires for dept- 52</inlineHelpText>
        <label>Model Capacity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0.75 TR</fullName>
                </value>
                <value>
                    <fullName>1.0 TR</fullName>
                </value>
                <value>
                    <fullName>1.5 TR</fullName>
                </value>
                <value>
                    <fullName>1 TR</fullName>
                </value>
                <value>
                    <fullName>2.0 TR</fullName>
                </value>
                <value>
                    <fullName>2.5 TR</fullName>
                </value>
                <value>
                    <fullName>2 TR</fullName>
                </value>
                <value>
                    <fullName>3.0 TR</fullName>
                </value>
                <value>
                    <fullName>3.5 TR</fullName>
                </value>
                <value>
                    <fullName>3 TR</fullName>
                </value>
                <value>
                    <fullName>4.0 HP</fullName>
                </value>
                <value>
                    <fullName>4.0 TR</fullName>
                </value>
                <value>
                    <fullName>4.5 TR</fullName>
                </value>
                <value>
                    <fullName>4 HP</fullName>
                </value>
                <value>
                    <fullName>4 TR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price_M3h__c</fullName>
        <inlineHelpText>Price/M3h</inlineHelpText>
        <label>Price/M3h</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_No__c</fullName>
        <label>Price/No</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_TR__c</fullName>
        <inlineHelpText>Price/TR</inlineHelpText>
        <label>Price/TR</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_cfm__c</fullName>
        <inlineHelpText>Price/cfm</inlineHelpText>
        <label>Price/cfm</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_gpm__c</fullName>
        <inlineHelpText>Price/gpm</inlineHelpText>
        <label>Price/gpm</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_hp__c</fullName>
        <inlineHelpText>Price/hp</inlineHelpText>
        <label>Price/hp</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pricing_Method__c</fullName>
        <description>UoM - 50/51
Capacity - 52</description>
        <inlineHelpText>UoM - 50/51
Capacity - 52</inlineHelpText>
        <label>Pricing Method</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>UoM</fullName>
                </value>
                <value>
                    <fullName>Capacity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Sub_Family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Product Sub Family</inlineHelpText>
        <label>Product Sub Family</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product_Family__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Product Sub Family</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Product_Family__c</referenceTo>
        <relationshipLabel>Price Matrices</relationshipLabel>
        <relationshipName>Price_Matrices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sub_Family_Code__c</fullName>
        <formula>Product_Sub_Family__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Product Sub Family Code</inlineHelpText>
        <label>Sub Family Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>price_kw__c</fullName>
        <inlineHelpText>price/kw</inlineHelpText>
        <label>price/kw</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Price Matrix</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product_Sub_Family__c</columns>
        <columns>Contract_Type__c</columns>
        <columns>Pricing_Method__c</columns>
        <columns>Price_TR__c</columns>
        <columns>Price_cfm__c</columns>
        <columns>Price_gpm__c</columns>
        <columns>Price_hp__c</columns>
        <columns>price_kw__c</columns>
        <columns>Price_M3h__c</columns>
        <columns>Capacity_Price__c</columns>
        <columns>Model_Capacity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Sub_Family__c</field>
            <operation>equals</operation>
            <value>Back pull out</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Capacity_Price_Matrix</fullName>
        <columns>NAME</columns>
        <columns>Product_Sub_Family__c</columns>
        <columns>Contract_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Sub_Family__c</field>
            <operation>contains</operation>
            <value>Air-cooled Inverter Ducted Splits</value>
        </filters>
        <label>Capacity Price Matrix</label>
    </listViews>
    <listViews>
        <fullName>UoM_Price_Matrix</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Pricing_Method__c</field>
            <operation>equals</operation>
            <value>UoM</value>
        </filters>
        <label>UoM Price Matrix</label>
    </listViews>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Price matrix Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Matrices</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>